## Process this file with automake to produce Makefile.in
lib_LTLIBRARIES = libbsp-core.la

libbsp_core_la_SOURCES = \
    ../../../deps/lua/lapi.c \
    ../../../deps/lua/lapi.h \
    ../../../deps/lua/lauxlib.c \
    ../../../deps/lua/lauxlib.h \
    ../../../deps/lua/lbaselib.c \
    ../../../deps/lua/lbitlib.c \
    ../../../deps/lua/lcode.c \
    ../../../deps/lua/lcode.h \
    ../../../deps/lua/lcorolib.c \
    ../../../deps/lua/lctype.c \
    ../../../deps/lua/lctype.h \
    ../../../deps/lua/ldblib.c \
    ../../../deps/lua/ldebug.c \
    ../../../deps/lua/ldebug.h \
    ../../../deps/lua/ldo.c \
    ../../../deps/lua/ldo.h \
    ../../../deps/lua/ldump.c \
    ../../../deps/lua/lfunc.c \
    ../../../deps/lua/lfunc.h \
    ../../../deps/lua/lgc.c \
    ../../../deps/lua/lgc.h \
    ../../../deps/lua/linit.c \
    ../../../deps/lua/liolib.c \
    ../../../deps/lua/llex.c \
    ../../../deps/lua/llex.h \
    ../../../deps/lua/llimits.h \
    ../../../deps/lua/lmathlib.c \
    ../../../deps/lua/lmem.c \
    ../../../deps/lua/lmem.h \
    ../../../deps/lua/loadlib.c \
    ../../../deps/lua/lobject.c \
    ../../../deps/lua/lobject.h \
    ../../../deps/lua/lopcodes.c \
    ../../../deps/lua/lopcodes.h \
    ../../../deps/lua/loslib.c \
    ../../../deps/lua/lparser.c \
    ../../../deps/lua/lparser.h \
    ../../../deps/lua/lstate.c \
    ../../../deps/lua/lstate.h \
    ../../../deps/lua/lstring.c \
    ../../../deps/lua/lstring.h \
    ../../../deps/lua/lstrlib.c \
    ../../../deps/lua/ltable.c \
    ../../../deps/lua/ltable.h \
    ../../../deps/lua/ltablib.c \
    ../../../deps/lua/ltm.c \
    ../../../deps/lua/ltm.h \
    ../../../deps/lua/lua.c \
    ../../../deps/lua/lua.h \
    ../../../deps/lua/luaconf.h \
    ../../../deps/lua/lualib.h \
    ../../../deps/lua/lundump.c \
    ../../../deps/lua/lundump.h \
    ../../../deps/lua/lvm.c \
    ../../../deps/lua/lvm.h \
    ../../../deps/lua/lzio.c \
    ../../../deps/lua/lzio.h \
    ../../../deps/lzo/minilzo.c \
    ../../../deps/lzo/minilzo.h \
    ../../../deps/lzo/lzoconf.h \
    ../../../deps/lzo/lzodefs.h \
    ../../../deps/snappy/snappy.h \
    ../../../deps/snappy/snappy-internal.h \
    ../../../deps/snappy/snappy.cc \
    ../../../deps/snappy/snappy-sinksource.h \
    ../../../deps/snappy/snappy-sinksource.cc \
    ../../../deps/snappy/snappy-stubs-public.h \
    ../../../deps/snappy/snappy-stubs-internal.h \
    ../../../deps/snappy/snappy-stubs-internal.cc \
    ../../../deps/snappy/snappy-c.h \
    ../../../deps/snappy/snappy-c.cc \
    bsp.h \
    bootstrap.c \
    bsp_bootstrap.h \
    conf.c \
    bsp_conf.h \
    core.c \
    bsp_core.h \
    debugger.c \
    bsp_debugger.h \
    fd.c \
    bsp_fd.h \
    fcgi.c \
    bsp_fcgi.h \
    hash.c \
    bsp_hash.h \
    http.c \
    bsp_http.h \
    logger.c \
    bsp_logger.h \
    mempool.c \
    bsp_mempool.h \
    misc.c \
    bsp_misc.h \
    object.c \
    bsp_object.h \
    os.c \
    bsp_os.h \
    script.c \
    bsp_script.h \
    socket.c \
    bsp_socket.h \
    spinlock.c \
    bsp_spinlock.h \
    status.c \
    bsp_status.h \
    string.c \
    bsp_string.h \
    thread.c \
    bsp_thread.h \
    timer.c \
    bsp_timer.h \
    variable.c \
    bsp_variable.h \
    json.c \
    bsp_json.h \
    msgpack.c \
    bsp_msgpack.h \
    amf.c \
    bsp_amf.h \
    db_sqlite.c \
    bsp_db_sqlite.h \
    db_mysql.c \
    bsp_db_mysql.h \
    ip_list.c \
    bsp_ip_list.h \
    server.c \
    bsp_server.h
    
libbsp_core_la_CFLAGS = -D_REENTRANT=1 -DSQLITE_THREADSAFE=1 -DSQLITE_ENABLE_FTS4 -DSQLITE_ENABLE_RTREE -DLUA_COMPAT_ALL -DLUA_USE_LINUX
libbsp_core_la_LDFLAGS = $(AM_LDFLAGS) -avoid-version