## Process this file with automake to produce Makefile.in
lib_LTLIBRARIES = libbsp-core.la

libbsp_core_la_SOURCES = \
	bsp.h \
	bootstrap.c \
	bsp_bootstrap.h \
	conf.c \
	bsp_conf.h \
	core.c \
	bsp_core.h \
	debugger.c \
	bsp_debugger.h \
	fd.c \
	bsp_fd.h \
	fcgi.c \
	bsp_fcgi.h \
	hash.c \
	bsp_hash.h \
	http.c \
	bsp_http.h \
	logger.c \
	bsp_logger.h \
	mempool.c \
	bsp_mempool.h \
	misc.c \
	bsp_misc.h \
	object.c \
	bsp_object.h \
	os.c \
	bsp_os.h \
	script.c \
	bsp_script.h \
	socket.c \
	bsp_socket.h \
	spinlock.c \
	bsp_spinlock.h \
	status.c \
	bsp_status.h \
	string.c \
	bsp_string.h \
	thread.c \
	bsp_thread.h \
	timer.c \
	bsp_timer.h \
	variable.c \
	bsp_variable.h \
	json.c \
	bsp_json.h \
	msgpack.c \
	bsp_msgpack.h \
	amf.c \
	bsp_amf.h \
	db_sqlite.c \
	bsp_db_sqlite.h \
	db_mysql.c \
	bsp_db_mysql.h \
	ip_list.c \
	bsp_ip_list.h \
	server.c \
	bsp_server.h

libbsp_core_la_LDFLAGS = $(AM_LDFLAGS) -avoid-version